syntax = "proto3";

package index;
option go_package = "github.com/pachyderm/pachyderm/src/server/pkg/storage/fileset/index";

import "github.com/pachyderm/pachyderm/src/server/pkg/storage/chunk/chunk.proto";

// Op is the set of operations that can be associated with data.
enum Op {
  APPEND = 0;
  OVERWRITE = 1;
  DELETE = 2;
}

// DataOp is a data reference and an operation associated with the referenced data.
message DataOp {
  chunk.DataRef data_ref = 1;
  Op op = 2;
}

// Datum is the id and size of a datum's contribution to a file. 
// (bryce) how is this going to be used and does it make sense?
message Datum {
  int64 id = 1;
  int64 size = 2;
}

// FileInfo is the data structure used in the fileset index for referencing the
// content of a file.
message FileInfo {
  // The sequence of DataOps represents the state of the file.
  repeated DataOp data_ops = 2;
  // The sequence of datums that contributed to a file.
  repeated Datum datums = 3;
}
